--- a/dc sentiment analysis.Rmd
+++ b/dc sentiment analysis.Rmd
@@ -23,7 +23,9 @@ library(stylo)
 # setwd('C:/Users/hzeig/Documents/Data Science/NYCDSA/Projects/Reddit")
 ```
 
+
 ### Load and merge dataframes
+
 ```{r}
 # import DFs
 dc_comm <- read.csv("dccomments.csv")
@@ -41,141 +43,6 @@ dc_comm <- dc_comm %>% dplyr::select(url, comment.date=date,
 
 
 dc_full <- merge(dc_thre, dc_comm)
-
-```
-
-
-
-### Quick stop-word removal
-
-```{r}
-
-library(tidytext)
-view(stop_words)
-
-dc_thre %>% delete.stop.words(title, 'is')
-
-
-stopwords('en')
-
-sapply(dc_full$thread.title, delete.stop.words)
-
-dc_full$thread.title <- delete.stop.words(dc_full$thread.title, 'if')
-
-
-dc_full$thread.title
-
-
-
-
-
-
-```
-
-
-
-### sentimentr 
-
-```{r results=c(1,6)}
-# 1. threads
-
-# 1.1 by thread text
-dc_sr_thre <- get_sentences(dc_thre$thread.text)
-dc_sr_thre_sent <- sentiment_by(dc_sr_thre, dc_thre$thread.text)
-
-# summary
-summary(dc_sr_thre_sent)
-
-# correlations
-df1 <- merge(dc_sr_thre_sent, dc_thre)
-cor(df1$thread.score, df1$thread.number.comments) # 0.781
-cor(df1$ave_sentiment, df1$word_count) # -0.287
-cor(df1$ave_sentiment, df1$thread.score) # 0.156
-cor(df1$ave_sentiment, df1$thread.number.comments) # 0.057
-## nothing fruitful
-
-# 1.2 by thread title
-dc_sr_titl <- get_sentences(dc_thre$thread.title)
-dc_sr_titl_sent <- sentiment_by(dc_sr_titl, dc_thre$thread.title)
-
-# summary
-summary(dc_sr_titl_sent)
-
-# correlations 
-df12 <- merge(dc_sr_titl_sent, dc_thre)
-cor(df12$ave_sentiment, df12$word_count)  ## -0.346**
-cor(df12$ave_sentiment, df12$thread.score)  # 0.067
-cor(df12$ave_sentiment, df12$thread.number.comments) # 0.05
-
-# 1.3 comments
-
-# by comment
-dc_sr_comm <- get_sentences(dc_full$comment)
-dc_sr_comm_sent <- sentiment_by(dc_sr_comm, dc_full$comment)
-
-
-df13 <-merge(dc_sr_comm_sent, dc_full)
-cor(df13$ave_sentiment, df13$word_count) # -0.018
-cor(df13$ave_sentiment, df13$comment.score) # -0.006
-cor(df13$ave_sentiment, df13$thread.number.comments) # 0.023
-cor(df13$ave_sentiment, df13$thread.score) # 0.027
-
-
-# summary
-summary(dc_sr_comm_sent)
-
-# plots
-plot(density(dc_sr_titl_sent$ave_sentiment), 
-     xlim=c(-1.5,1),
-     ylim=c(0,4),
-     main = "DC Average Sentiment by Text")
-lines(density(dc_sr_thre_sent$ave_sentiment),
-      col = 2)
-lines(density(dc_sr_comm_sent$ave_sentiment),
-      col = 3)
-legend("topleft", 
-       c('title text','post text','comments'),
-       col = 1:3,
-       lty = 1,
-       title = "Text Colors")
-
-```
-
-
-```{r}
-## 2. arranging by groups
-
-# 2.1 by subreddit
-# text
-dc_sr_thre_sub <- get_sentences(dc_thre$thread.text)
-dc_sr_thre_sub_sent <- sentiment_by(dc_sr_thre_sub, dc_thre$subreddit)
-
-df13 <- merge(dc_sr_thre_sub, dc_thre)
-
-df13 %>%
-  group_by(subreddit) %>%
-  mutate(subreddit = fct_reorder(subreddit, ave_sentiment)) %>%
-  ggplot(aes(x=subreddit, y=ave_sentiment)) +
-  geom_bar(stat='identity')
-
-
-# title
-dc_sr_titl_sub <- get_sentences(dc_thre$thread.title)
-dc_sr_titl_sub_sent <- sentiment_by(dc_sr_titl_sub, dc_thre$subreddit)
-
-df14 <- merge(dc_sr_titl, dc_thre)
-
-
-
-# 2.2 by author
-
-
-```
-
-
-```{r}
-# 3. Trends over time
-
 
 ```
 
@@ -261,3 +128,97 @@ saveRDS(vd_df, "dcvaderfull.rds")
 
 
 ```
+
+
+### sentimentr
+
+```{r results=c(1,6)}
+# # 1. threads
+# 
+# # 1.1 by thread text
+# dc_sr_thre <- get_sentences(dc_thre$thread.text)
+# dc_sr_thre_sent <- sentiment_by(dc_sr_thre, dc_thre$thread.text)
+# 
+# # summary
+# summary(dc_sr_thre_sent)
+# 
+# # correlations
+# df1 <- merge(dc_sr_thre_sent, dc_thre)
+# cor(df1$thread.score, df1$thread.number.comments) # 0.781
+# cor(df1$ave_sentiment, df1$word_count) # -0.287
+# cor(df1$ave_sentiment, df1$thread.score) # 0.156
+# cor(df1$ave_sentiment, df1$thread.number.comments) # 0.057
+# ## nothing fruitful
+# 
+# # 1.2 by thread title
+# dc_sr_titl <- get_sentences(dc_thre$thread.title)
+# dc_sr_titl_sent <- sentiment_by(dc_sr_titl, dc_thre$thread.title)
+# 
+# # summary
+# summary(dc_sr_titl_sent)
+# 
+# # correlations 
+# df12 <- merge(dc_sr_titl_sent, dc_thre)
+# cor(df12$ave_sentiment, df12$word_count)  ## -0.346**
+# cor(df12$ave_sentiment, df12$thread.score)  # 0.067
+# cor(df12$ave_sentiment, df12$thread.number.comments) # 0.05
+# 
+# # 1.3 comments
+# 
+# # by comment
+# dc_sr_comm <- get_sentences(dc_full$comment)
+# dc_sr_comm_sent <- sentiment_by(dc_sr_comm, dc_full$comment)
+# 
+# 
+# df13 <-merge(dc_sr_comm_sent, dc_full)
+# cor(df13$ave_sentiment, df13$word_count) # -0.018
+# cor(df13$ave_sentiment, df13$comment.score) # -0.006
+# cor(df13$ave_sentiment, df13$thread.number.comments) # 0.023
+# cor(df13$ave_sentiment, df13$thread.score) # 0.027
+# 
+# 
+# # summary
+# summary(dc_sr_comm_sent)
+# 
+# # plots
+# plot(density(dc_sr_titl_sent$ave_sentiment), 
+#      xlim=c(-1.5,1),
+#      ylim=c(0,4),
+#      main = "DC Average Sentiment by Text")
+# lines(density(dc_sr_thre_sent$ave_sentiment),
+#       col = 2)
+# lines(density(dc_sr_comm_sent$ave_sentiment),
+#       col = 3)
+# legend("topleft", 
+#        c('title text','post text','comments'),
+#        col = 1:3,
+#        lty = 1,
+#        title = "Text Colors")
+# 
+# 
+# ## 2. arranging by groups
+# 
+# # 2.1 by subreddit
+# # text
+# dc_sr_thre_sub <- get_sentences(dc_thre$thread.text)
+# dc_sr_thre_sub_sent <- sentiment_by(dc_sr_thre_sub, dc_thre$subreddit)
+# 
+# df13 <- merge(dc_sr_thre_sub, dc_thre)
+# 
+# df13 %>%
+#   group_by(subreddit) %>%
+#   mutate(subreddit = fct_reorder(subreddit, ave_sentiment)) %>%
+#   ggplot(aes(x=subreddit, y=ave_sentiment)) +
+#   geom_bar(stat='identity')
+# 
+# 
+# # title
+# dc_sr_titl_sub <- get_sentences(dc_thre$thread.title)
+# dc_sr_titl_sub_sent <- sentiment_by(dc_sr_titl_sub, dc_thre$subreddit)
+# 
+# df14 <- merge(dc_sr_titl, dc_thre)
+# 
+
+
+```
+
