--- a/reddit_mining.Rmd
+++ b/reddit_mining.Rmd
@@ -1,6 +1,6 @@
 ## Data collection
 
-### Libraries: RedditExtractoR
+### Libraries: RedditExtractoR --- these files extracted on Nov 4th, 2021
 
 ```{r}
 library(RedditExtractoR)
@@ -17,9 +17,9 @@ dc_subreddits <- unique(dc_urls$subreddit)
 
 dc_comments <- get_thread_content(dc_urls$url)
 
-write.csv(dc_comments[["threads"]], "./Dave Chapelle Threads.csv", row.names = FALSE)
-write.csv(dc_comments[["comments"]], "./Dave Chapelle Comments.csv", row.names = FALSE)
-write.csv(dc_subreddits, "Dave Chapelle Subreddits.csv", row.names = FALSE)
+write.csv(dc_comments[["threads"]], "dcthreads.csv", row.names = FALSE)
+write.csv(dc_comments[["comments"]], "dccomments.csv", row.names = FALSE)
+write.csv(dc_subreddits, "dcsubreddits.csv", row.names = FALSE)
 ```
 
 ### Extract data for Joe Manchin
@@ -32,9 +32,9 @@ jm_subreddits <- unique(jm_urls$subreddit)
 
 jm_comments <- get_thread_content(jm_urls$url)
 
-write.csv(jm_comments[["threads"]], "./Joe Manchin Threads.csv", row.names = FALSE)
-write.csv(jm_comments[["comments"]], "./Joe Manchin Comments.csv", row.names = FALSE)
-write.csv(jm_subreddits, "Joe Manchin Subreddits.csv", row.names = FALSE)
+write.csv(jm_comments[["threads"]], "jmthreads.csv", row.names = FALSE)
+write.csv(jm_comments[["comments"]], "jmcomments.csv", row.names = FALSE)
+write.csv(jm_subreddits, "jmsubreddits.csv", row.names = FALSE)
 ```
 
 
